# chrome-valet

./: .gitignore  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml  build.rs  deny.toml  install.bat  uninstall.bat
.github/workflows/: deploymsi.yml  rust.yml  testing.yml
assets/: eula.rtf
assets/source/: valet_icon.xcf
src/: chrome_interface.rs  custom_frame.rs  http_utils.rs  main.rs  registry_utils.rs
wix/: main.wxs
