[package]
name = "chrome_profile_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
registry = "*"
utfx = "*"
winapi = "*"
clap = { version = "4.1.4", features = ["derive"] }
device_query = "1.1.2"
egui = "0.20.1"
eframe = { version = "0.20.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
reqwest = "0.11.14"
futures = "0.3.26"
tokio = { version = "1", features = ["full"] }
threadpool = "1.8.1"
image = "0.24.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
