[package]
name = "chrome_valet"
version = "0.3.3"
edition = "2021"
authors = ["Garret Thomson <g@sirsonic.com>"]
description = "A utility to open urls in a preferred chrome profile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.1.4", features = ["derive"] }
device_query = "1.1.2"
egui = "0.20.1"
eframe = { version = "0.20.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
futures = "0.3.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
image = "0.24.5"
winapi = "0.3.9"
utfx = "0.1.0"
registry = "1.2.2"
simple-logging = "2.0.2"
log = "0.4.17"
quick-error = "2.0.1"
cli-clipboard = "0.4.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
tugger-windows-codesign = "0.10.0"
