[package]
name = "chrome_valet"
version = "0.6.0"
edition = "2021"
authors = ["Garret Thomson <g@sirsonic.com>"]
description = "A utility to open urls in a preferred chrome profile"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }
device_query = "*"
egui = "*"
eframe = { version = "*", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
futures = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
image = "*"
winapi = "*"
utfx = "*"
registry = "*"
simple-logging = "*"
log = "*"
quick-error = "*"
cli-clipboard = "*"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"